recursion.lessons.recursion.tree.Tree.scala.error
Tree:4: error: value ^ is not a member of Double
		avance(length*shrink^steps(i-1))
                                    ^