recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	for(i<- 1 to steps){
		avance(length*shrink^steps(i-1))
		gauche(angle/(2^(i-1)))
	}
avance(length:Double)

avance(length*shrink)
recule(length*shrink:Double)
droite(2*angle:Double)
avance(length*shrink)
recule(length*shrink)

}
